Partially completed Banking Microservice

--- a/MicroRabbit.Banking.Api/appsettings.json
+++ b/MicroRabbit.Banking.Api/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "BankingDbConnection": "Server=LAPTOP-P7AO1VS1;Database=BankingDB;Trusted_Connection=True;MultipleActiveResultSets=true"
+      
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
