--- a/MicroRabbit.Transfert.Api/appsettings.json
+++ b/MicroRabbit.Transfert.Api/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "transferDbConnection": "Server=LAPTOP-P7AO1VS1;Database=TransferDB;Trusted_Connection=True;MultipleActiveResultSets=true"
+
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
